crates/diag/src/report/snapshots/mu_diag__report__tests__emit_report_multi_line_edge_case_sandwiched_newline.snap
---
source: crates/diag/src/report/tests.rs
expression: report.emit_to_string().unwrap()
---
error: invalid character sequence
> test.mu:1
| 
| "
| 
\
| 

