crates/diag/src/report/snapshots/mu_diag__report__tests__emit_report_multi_line_large.snap
---
source: crates/diag/src/report/tests.rs
expression: report.emit_to_string().unwrap()
---
[31merror[0m: mismatched type
[34m>[0m test:1
[34m|[0m 
[34m|[0m let x: Foo = [31;4mBar {[0m
[34m|[0m [31;4m  a: 0,[0m
[34m|[0m [31;4m  [0m[31;4m...[0m
[34m|[0m [31;4m  g: 0,[0m
[34m|[0m [31;4m}[0m;
[34m|[0m 
[34m+[0m expected `Foo`, found `Bar`

