crates/diag/src/report/snapshots/mu_diag__report__tests__emit_report_multi_line_no_color.snap
---
source: crates/diag/src/report/tests.rs
expression: report.emit_to_string().unwrap()
---
error: mismatched type
> test.mu:1
| 
| let x: Foo = Bar {
|   a: 0,
|   b: 0,
| };
| 
+ expected `Foo`, found `Bar`

