crates/diag/src/report/snapshots/mu_diag__report__tests__emit_report_single_line_no_color.snap
---
source: crates/diag/src/report/tests.rs
expression: report.emit_to_string().unwrap()
---
error: expected semicolon
> test.hebi:1
| 
| let x = 10_
| 

